--- a/templates/shop.html
+++ b/templates/shop.html
@@ -2,15 +2,15 @@
 {% extends 'index4.html' %}
 
 {% block custom_title %}
-    <title>Kitaabyn | Shop</title>
+    <title>Eshop</title>
 {% endblock custom_title %}
 
 {% block side %}
 <nav id="sidebar">
     <div class="sidebar-header">
-        <h3><a href="/">Kitaabyn</a></h3>
+        <h3><a href="/">Eshop</a></h3>
             
-        <strong><a href="/">K.</a></strong>
+        <strong><a href="/">S.</a></strong>
     </div>
 
     <ul class="list-unstyled components">
