--- a/templates/cart.html
+++ b/templates/cart.html
@@ -63,7 +63,10 @@
 <div class="row">
     <div class="col-9"></div>
     <div class="col-3">
-        <button class="btn btn-block btn-secondary">Checkout</button>
+       
+            <button class="btn btn-block btn-secondary"  data-toggle="modal" data-target="#exampleModal">Checkout</button>
+        
+        
     </div>
 </div>
 <br>
@@ -76,6 +79,48 @@
     </div>
 </div>
 
+<!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel"> Check Out Form</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form action="{% url 'checkout' %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="">Name</label>
+                    <input type="text" name="name" id=""
+                    class="form-control" placeholder=""
+                    aria-describedby="helpid">
+                </div>
+                <div class="form-group">
+                    <label for="">Address</label>
+                    <input type="text" name="address" id=""
+                    class="form-control" placeholder=""
+                    aria-describedby="helpid">
+                </div>
+                <div class="form-group">
+                    <label for="">Phone</label>
+                    <input type="text" name="phone" id=""
+                    class="form-control" placeholder=""
+                    aria-describedby="helpid">
+                </div>
+                <input type="submit" class="btn float-right btn-primary" value="Check out">
+            </form>
+         
+        </div>
+        
+      </div>
+    </div>
+  </div>
 
 {% endblock content %}
 
